--- a/Day_08.ipynb
+++ b/Day_08.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Day_08.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP+mOgXeUFQ9wTO1l0QTbhu",
+      "authorship_tag": "ABX9TyOz543d6LpNapGJTVg4r98I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +99,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sns.boxplot(x='size', y='total_bill', data=my_dataset, hue='day')"
+        "sns.boxplot(x='day', y='total_bill', data=my_dataset, hue='time')"
       ],
       "metadata": {
         "id": "LYF8XddbYSDw"
