--- a/Day_10_Fundamentals_of_Statistics_and_Probability.ipynb
+++ b/Day_10_Fundamentals_of_Statistics_and_Probability.ipynb
@@ -240,7 +240,7 @@
         "5. (Multiplicative Rule) If events A and B are independent, then the probability of event A and B jointly occuring is the product of the probabilities of events A and B respectively. $p(AB) = p(A)p(B)$\n",
         "\n",
         "<div class=\"alert alert-info\">\n",
-        "📝 <b>Note:</b> Events A and B are independent if the occurence of event A doesn't change the likelihood of Event B occuring. Do not confuse this with <b>mutually exclusive</b> events. If events A and B are mutually exclusive (disjoint), they cannot both happen. \n",
+        "<b>Note:</b> Events A and B are independent if the occurence of event A doesn't change the likelihood of Event B occuring. Do not confuse this with <b>mutually exclusive</b> events. If events A and B are mutually exclusive (disjoint), they cannot both happen. \n",
         "</div>"
       ]
     },
