--- a/Day_10_Fundamentals_of_Statistics_and_Probability.ipynb
+++ b/Day_10_Fundamentals_of_Statistics_and_Probability.ipynb
@@ -54,6 +54,7 @@
         "id": "67cg03eZ3he6"
       },
       "source": [
+        "#@title\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "from matplotlib import pyplot as plt\n",
@@ -102,6 +103,7 @@
         "id": "Bv0OxvD8ILMl"
       },
       "source": [
+        "#@title\n",
         "def toss_coin(number_of_tosses=100):\n",
         "    return pd.Series(np.random.choice(['Heads', 'Tails'], number_of_tosses))\n",
         "\n",
@@ -117,6 +119,7 @@
         "id": "ZUOWrp2tNmmy"
       },
       "source": [
+        "#@title\n",
         "results = toss_coin()\n",
         "print(results.value_counts())\n",
         "fig = pg.Figure([pg.Bar(x=results.value_counts().keys(), \n",
@@ -145,6 +148,7 @@
         "id": "DbbAeCJOZpmr"
       },
       "source": [
+        "#@title\n",
         "results = pd.Series([np.sum(toss_coin(20) == 'Heads') for _ in range(1000)])\n",
         "fig = pg.Figure([pg.Bar(x=results.value_counts().keys(), \n",
         "                        y=results.value_counts().values)])\n",
@@ -168,6 +172,7 @@
         "id": "4YvjeQGwqUj1"
       },
       "source": [
+        "#@title\n",
         "results = pd.Series([np.sum(toss_coin(500) == 'Heads') for _ in range(5000)])\n",
         "fig = pg.Figure([pg.Bar(x=results.value_counts().keys(), \n",
         "                        y=results.value_counts().values)])\n",
@@ -197,6 +202,7 @@
         "id": "UWwftztdOKvG"
       },
       "source": [
+        "#@title\n",
         "results = {shots: throw_dice(shots) for shots in [10, 100, 1000, 10000, 1000000]}\n",
         "fig = pg.Figure([pg.Bar(x=result.value_counts().keys(), \n",
         "                        y=result.value_counts().values / shots,) \n",
@@ -297,6 +303,7 @@
         "id": "kefyYq44US6f"
       },
       "source": [
+        "#@title\n",
         "def number_of_numbered_cards_drawn_before_ace(trials=100, show_trials=10):\n",
         "    values = ['A', '2', '3', '4', '5', '6', '7', '8', '9', '10', 'J', 'Q', 'K']\n",
         "    ranks = ['H', 'D', 'C', 'S']\n",
@@ -353,6 +360,7 @@
         "id": "K1tK6czZixdv"
       },
       "source": [
+        "#@title\n",
         "results = pd.Series(cards_thrown_counts)\n",
         "fig = pg.Figure([pg.Bar(x=results.value_counts().keys(), \n",
         "                        y=results.value_counts().values)])\n",
@@ -438,6 +446,7 @@
         "id": "ZWXGAh2fe3ip"
       },
       "source": [
+        "#@title\n",
         "from matplotlib import pyplot as plt\n",
         "plt.style.use('ggplot')\n",
         "plt.figure(figsize=(10, 10))\n",
@@ -476,6 +485,7 @@
         "id": "mfXq7su73he8"
       },
       "source": [
+        "#@title\n",
         "grades = pd.read_csv(\"https://archive.org/download/ml-fundamentals-data/machine-learning-fundamentals-data/grades.csv\")\n",
         "print(grades.shape)\n",
         "grades.agg([\"mean\", \"var\", \"std\"])"
@@ -489,6 +499,7 @@
         "id": "IPtO3_G23he9"
       },
       "source": [
+        "#@title\n",
         "g = sns.FacetGrid(grades.melt(\"Name\"), col=\"variable\")\n",
         "g.map(plt.hist, \"value\")"
       ],
@@ -510,6 +521,7 @@
         "id": "i7lo_TZr3he-"
       },
       "source": [
+        "#@title\n",
         "grades[\"Physics_std\"] = (grades[\"Physics\"] - grades[\"Physics\"].mean()) / grades[\"Physics\"].std()"
       ],
       "execution_count": null,
@@ -521,6 +533,7 @@
         "id": "dgfwyX7G3he-"
       },
       "source": [
+        "#@title\n",
         "grades.head()"
       ],
       "execution_count": null,
@@ -549,6 +562,7 @@
         "id": "RcxIigBz3hfA"
       },
       "source": [
+        "#@title\n",
         "grades[\"Maths_std\"] = (grades[\"Maths\"] - grades[\"Maths\"].mean()) / grades[\"Maths\"].std()\n",
         "grades.head()"
       ],
@@ -597,6 +611,7 @@
         "id": "AW7zhBam3hfG"
       },
       "source": [
+        "#@title\n",
         "from scipy.stats import binom"
       ],
       "execution_count": null,
@@ -621,6 +636,7 @@
         "id": "PeB5cBkp3hfG"
       },
       "source": [
+        "#@title\n",
         "binom.pmf(k=5, n=5, p=0.25)"
       ],
       "execution_count": null,
@@ -648,6 +664,7 @@
         "id": "hquniyy63hfH"
       },
       "source": [
+        "#@title\n",
         "1 - binom.pmf(k=4, n=5, p=0.75) - binom.pmf(k=5, n=5, p=0.75)"
       ],
       "execution_count": null,
@@ -672,6 +689,7 @@
         "id": "ZCgi1f1x3hfH"
       },
       "source": [
+        "#@title\n",
         "binom.cdf(3, n=5, p=0.75)"
       ],
       "execution_count": null,
@@ -703,6 +721,7 @@
         "id": "2xVbMbX53hfI"
       },
       "source": [
+        "#@title\n",
         "from scipy.stats import norm"
       ],
       "execution_count": null,
@@ -733,6 +752,7 @@
         "id": "lfkKKZl-3hfI"
       },
       "source": [
+        "#@title\n",
         "x = np.linspace(-10, 10, 100)\n",
         "f1 = norm.pdf(x, loc=0, scale=1)\n",
         "f2 = norm.pdf(x, loc=1, scale=1)\n",
@@ -783,6 +803,7 @@
         "id": "w-h-D9zX3hfK"
       },
       "source": [
+        "#@title\n",
         "norm.cdf(0)"
       ],
       "execution_count": null,
@@ -803,6 +824,7 @@
         "id": "VujTl2v53hfL"
       },
       "source": [
+        "#@title\n",
         "norm.ppf(0.5)"
       ],
       "execution_count": null,
@@ -843,6 +865,7 @@
         "id": "rEsdL9F23hfM"
       },
       "source": [
+        "#@title\n",
         "norm.ppf(0.84, loc=169.57, scale=7.57)"
       ],
       "execution_count": null,
@@ -854,6 +877,7 @@
         "id": "WkfIQtqZ3hfM"
       },
       "source": [
+        "#@title\n",
         "169.57 + 7.57"
       ],
       "execution_count": null,
@@ -874,6 +898,7 @@
         "id": "lWSgKwPl3hfN"
       },
       "source": [
+        "#@title\n",
         "norm.ppf(0.975, loc=169.57, scale=7.57)"
       ],
       "execution_count": null,
@@ -885,6 +910,7 @@
         "id": "grKpUsPA3hfN"
       },
       "source": [
+        "#@title\n",
         "169.57 + 2 * 7.57"
       ],
       "execution_count": null,
@@ -905,6 +931,7 @@
         "id": "OdyrBlxA3hfN"
       },
       "source": [
+        "#@title\n",
         "norm.ppf(0.0015, loc=169.57, scale=7.57)"
       ],
       "execution_count": null,
